Fix code block text overflow

--- a/nextjs/styles/globals.css
+++ b/nextjs/styles/globals.css
@@ -129,6 +129,9 @@ ol {
   .header {
     display: block;
   }
+  code {
+    font-size: 0.5rem;
+  }
   .posts {
     grid-template-columns: 1fr;
   }
